Create and style nav bar

--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
     <title>odin website</title>
 </head>
 <body>
-    <div class="header">
-        <nav class="nav-bar">
-            <ul>
-                <li><a href="#">Odin</a></li>
-                <li><a href="#">link one</a></li>
-                <li><a href="#">link two</a></li>
-                <li><a href="#">link three</a></li>
-            </ul>
-        </nav>
+    <div class="content">
+        <div class="header">
+            <nav class="nav-bar">
+                <div class="logo-container">
+                    <a href="#">Odin</a>
+                </div>
+
+                <div class="link-container">
+                    <a href="#">link one</a>
+                    <a href="#">link two</a>
+                    <a href="#">link three</a>
+                </div>
+            </nav>
+        </div>
     </div>
 </body>
 </html>
