--- a/index.html
+++ b/index.html
@@ -16,11 +16,27 @@
                 </div>
 
                 <div class="link-container">
-                    <a href="#">link one</a>
+                    <a href="#header">Header</a>
                     <a href="#">link two</a>
                     <a href="#">link three</a>
                 </div>
             </nav>
+
+            <div class="hero-content" id="header">
+                <div class="left-section">
+                    <h1>
+                        This website is awesome
+                    </h1>
+
+                    <p>
+                        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
+                    </p>
+
+                    <button class="signup">Sign Up</button>
+                </div>
+
+                <div class="right-section">this is a placeholder for an image</div>
+            </div>
         </div>
     </div>
 </body>
