Add team section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
     <div class="content">
         <div class="header">
+
+            <!--Nav bar-->
             <nav class="nav-bar">
                 <div class="logo-container">
                     <a href="#">Odin</a>
@@ -22,6 +24,7 @@
                 </div>
             </nav>
 
+            <!--Hero Section-->
             <div class="hero-content" id="header">
                 <div class="left-section">
                     <h1>
@@ -36,6 +39,49 @@
                 </div>
 
                 <div class="right-section">this is a placeholder for an image</div>
+            </div>
+        </div>
+
+        <!--Second Section-->
+        <div class="team-section">
+            <h1>Old Avengers</h1>
+            <div class="persons">
+                <div class="person">
+                    <div class="photo">
+
+                    </div>
+                    <div class="info">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+
+                <div class="person">
+                    <div class="photo">
+
+                    </div>
+                    <div class="info">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+
+                <div class="person">
+                    <div class="photo">
+
+                    </div>
+                    <div class="info">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+
+                <div class="person">
+                    <div class="photo">
+
+                    </div>
+                    <div class="info">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
