Add team section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,83 +8,90 @@
     <link rel="stylesheet" href="styles.css">
     <title>odin website</title>
 </head>
+
 <body>
     <div class="content">
-        <div class="header">
+        <div class="hero-section">
+            <div class="header">
 
-            <!--Nav bar-->
-            <nav class="nav-bar">
-                <div class="logo-container">
-                    <a href="#">Odin</a>
+                <!--Nav bar-->
+                <nav class="nav-bar">
+                    <div class="logo-container">
+                        <a href="#">Odin</a>
+                    </div>
+
+                    <div class="link-container">
+                        <a href="#header">Header</a>
+                        <a href="#team">Team</a>
+                        <a href="#">link three</a>
+                    </div>
+                </nav>
+
+                <!--Hero Section-->
+                <div class="hero-content" id="header">
+                    <div class="left-section">
+                        <h1>
+                            This website is awesome
+                        </h1>
+
+                        <p>
+                            This website has some subtext that goes here under the main title. It's a smaller font and
+                            the color is lower contrast.
+                        </p>
+
+                        <button class="signup">Sign Up</button>
+                    </div>
+
+                    <div class="right-section">this is a placeholder for an image</div>
                 </div>
-
-                <div class="link-container">
-                    <a href="#header">Header</a>
-                    <a href="#">link two</a>
-                    <a href="#">link three</a>
-                </div>
-            </nav>
-
-            <!--Hero Section-->
-            <div class="hero-content" id="header">
-                <div class="left-section">
-                    <h1>
-                        This website is awesome
-                    </h1>
-
-                    <p>
-                        This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
-                    </p>
-
-                    <button class="signup">Sign Up</button>
-                </div>
-
-                <div class="right-section">this is a placeholder for an image</div>
             </div>
         </div>
 
-        <!--Second Section-->
-        <div class="team-section">
-            <h1>Old Avengers</h1>
-            <div class="persons">
-                <div class="person">
-                    <div class="photo">
+        <!--Team Section-->
+        <div class="team-section" id="team">
+            <div class="team-content">
+                <div class="team-heading">Old Avengers</div>
+                <div class="people">
+                    <div class="person">
+                        <div class="photo">
 
+                        </div>
+                        <div class="info">
+                            this is some subtext under an illustration or image
+                        </div>
                     </div>
-                    <div class="info">
-                        this is some subtext under an illustration or image
+
+                    <div class="person">
+                        <div class="photo">
+
+                        </div>
+                        <div class="info">
+                            this is some subtext under an illustration or image
+                        </div>
                     </div>
+
+                    <div class="person">
+                        <div class="photo">
+
+                        </div>
+                        <div class="info">
+                            this is some subtext under an illustration or image
+                        </div>
+                    </div>
+
+                    <div class="person">
+                        <div class="photo">
+
+                        </div>
+                        <div class="info">
+                            this is some subtext under an illustration or image
+                        </div>
+                    </div>
+
                 </div>
-
-                <div class="person">
-                    <div class="photo">
-
-                    </div>
-                    <div class="info">
-                        this is some subtext under an illustration or image
-                    </div>
-                </div>
-
-                <div class="person">
-                    <div class="photo">
-
-                    </div>
-                    <div class="info">
-                        this is some subtext under an illustration or image
-                    </div>
-                </div>
-
-                <div class="person">
-                    <div class="photo">
-
-                    </div>
-                    <div class="info">
-                        this is some subtext under an illustration or image
-                    </div>
-                </div>
-
             </div>
         </div>
     </div>
 </body>
+
 </html>
