--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="link-container">
                         <a href="#header">Header</a>
                         <a href="#team">Team</a>
-                        <a href="#">link three</a>
+                        <a href="#quote">Quote</a>
                     </div>
                 </nav>
 
@@ -88,6 +88,21 @@
                         </div>
                     </div>
 
+                </div>
+            </div>
+        </div>
+
+        <!--Quote Section-->
+
+        <div class="quote-section" id="quote">
+            <div class="quote-content">
+                <div class="quote-text">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
+                    maybe people will actually read it. Who knows? All I know is that it looks nice.
+                </div>
+
+                <div class="author">
+                    -Thor, God of Thunder
                 </div>
             </div>
         </div>
