Add footer section

--- a/index.html
+++ b/index.html
@@ -106,6 +106,33 @@
                 </div>
             </div>
         </div>
+
+        <!--Sign Up Section-->
+        <div class="signup-section" id="signup">
+            <div class="signup-bg">
+                <div class="signup-content">
+                    <div class="signup-text">
+                        <div class="signup-heading">
+                            Call to action It's time!
+                        </div>
+                        <div class="signup-description">
+                            Sign up for our product by clicking that button right over there!
+                        </div>
+                    </div>
+
+                    <div class="signup-button">
+                        <button class="button">Sign up</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!--Footer Section-->
+        <div class="footer-section hero-section">
+            <div class="footer-text">
+                Copyright &copy; Codeware 2023
+            </div>
+        </div>
     </div>
 </body>
 
