Add images, quote, change nav bar style and color

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>odin website</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Cats&Dogs</title>
 </head>
 
 <body>
@@ -17,12 +17,20 @@
                 <!--Nav bar-->
                 <nav class="nav-bar">
                     <div class="logo-container">
-                        <a href="#">Odin</a>
+                        <a href="#">
+                            <div class="logo-text">Cats</div>
+                            <div class="logo-img">
+                                <img class="mid-img" src="images/cat.png" alt="logo">
+                                <img class="mid-img" src="images/dog.png" alt="logo">
+                            </div>
+                            <div class="logo-text">Dogs</div>
+                        </a>
+
                     </div>
 
                     <div class="link-container">
-                        <a href="#header">Header</a>
-                        <a href="#team">Team</a>
+                        <a href="#header">Hero</a>
+                        <a href="#pet">Pets</a>
                         <a href="#quote">Quote</a>
                     </div>
                 </nav>
@@ -31,60 +39,67 @@
                 <div class="hero-content" id="header">
                     <div class="left-section">
                         <h1>
-                            This website is awesome
+                            Cats and Dogs are awesome
                         </h1>
 
                         <p>
-                            This website has some subtext that goes here under the main title. It's a smaller font and
-                            the color is lower contrast.
+                            Dogs come when they're called; cats take a message and get back to you later.
                         </p>
 
-                        <button class="signup">Sign Up</button>
+                        <button class="signup">Agree</button>
                     </div>
 
-                    <div class="right-section">this is a placeholder for an image</div>
+                    <div class="right-section">
+                        <img src="./images/cats-and-dogs.jpg" alt="cats and dogs">
+                    </div>
                 </div>
             </div>
         </div>
 
-        <!--Team Section-->
-        <div class="team-section" id="team">
-            <div class="team-content">
-                <div class="team-heading">Old Avengers</div>
-                <div class="people">
-                    <div class="person">
+        <!--Pets Section-->
+        <div class="pets-section" id="pet">
+            <div class="pets-content">
+                <div class="pets-heading">
+                    Some Cats and Dogs
+                </div>
+                <div class="pets">
+                    <div class="cat-dog">
                         <div class="photo">
-
+                            <img class="pet-img" src="./images/c-d-01.jpg" alt="cats and dogs">
                         </div>
+
                         <div class="info">
-                            this is some subtext under an illustration or image
+                            To the world you may be just one person, but to one person you may be the world.
                         </div>
                     </div>
 
-                    <div class="person">
+                    <div class="cat-dog">
                         <div class="photo">
-
+                            <img class="pet-img" src="./images/c-d-02.jpg" alt="cats and dogs">
                         </div>
+
                         <div class="info">
-                            this is some subtext under an illustration or image
+                            It's not what we have in life, but who we have in our life that matters.
                         </div>
                     </div>
 
-                    <div class="person">
+                    <div class="cat-dog">
                         <div class="photo">
-
+                            <img class="pet-img" src="./images/c-d-03.jpg" alt="cats and dogs">
                         </div>
+
                         <div class="info">
-                            this is some subtext under an illustration or image
+                            A good friend is like a four-leaf clover; hard to find and lucky to have.
                         </div>
                     </div>
 
-                    <div class="person">
+                    <div class="cat-dog">
                         <div class="photo">
-
+                            <img class="pet-img" src="./images/c-d-04.jpg " alt=" cats and dogs">
                         </div>
+
                         <div class="info">
-                            this is some subtext under an illustration or image
+                            Time doesn't take away from friendship, nor does separation.
                         </div>
                     </div>
 
@@ -97,31 +112,30 @@
         <div class="quote-section" id="quote">
             <div class="quote-content">
                 <div class="quote-text">
-                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or
-                    maybe people will actually read it. Who knows? All I know is that it looks nice.
+                    Friendships is the golden thread that ties the heart of all the world.
                 </div>
 
                 <div class="author">
-                    -Thor, God of Thunder
+                    -JOHN EVELYN
                 </div>
             </div>
         </div>
 
-        <!--Sign Up Section-->
-        <div class="signup-section" id="signup">
-            <div class="signup-bg">
-                <div class="signup-content">
-                    <div class="signup-text">
-                        <div class="signup-heading">
+        <!--Banner Section-->
+        <div class="banner-section" id="banner">
+            <div class="banner-bg">
+                <div class="banner-content">
+                    <div class="banner-text">
+                        <div class="banner-heading">
                             Call to action It's time!
                         </div>
-                        <div class="signup-description">
-                            Sign up for our product by clicking that button right over there!
+                        <div class="banner-description">
+                            If you like this landing page click on that button right over there!
                         </div>
                     </div>
 
-                    <div class="signup-button">
-                        <button class="button">Sign up</button>
+                    <div class="banner-button">
+                        <button class="button">Like</button>
                     </div>
                 </div>
             </div>
@@ -130,7 +144,7 @@
         <!--Footer Section-->
         <div class="footer-section hero-section">
             <div class="footer-text">
-                Copyright &copy; Codeware 2023
+                Copyright &copy; C&D 2023
             </div>
         </div>
     </div>
