Change classes name

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             Cats and Dogs are awesome
                         </h1>
 
-                        <p>
+                        <p class="hero-description">
                             Dogs come when they're called; cats take a message and get back to you later.
                         </p>
 
@@ -60,7 +60,9 @@
         <div class="pets-section" id="pet">
             <div class="pets-content">
                 <div class="pets-heading">
-                    Some Cats and Dogs
+                    <h2 class="pets-heading">
+                        Some Cats and Dogs
+                    </h2>
                 </div>
                 <div class="pets">
                     <div class="cat-dog">
@@ -68,8 +70,10 @@
                             <img class="pet-img" src="./images/c-d-01.jpg" alt="cats and dogs">
                         </div>
 
-                        <div class="info">
-                            To the world you may be just one person, but to one person you may be the world.
+                        <div class="info-container">
+                            <p class="info">
+                                To the world you may be just one person, but to one person you may be the world.
+                            </p>
                         </div>
                     </div>
 
@@ -78,8 +82,10 @@
                             <img class="pet-img" src="./images/c-d-02.jpg" alt="cats and dogs">
                         </div>
 
-                        <div class="info">
-                            It's not what we have in life, but who we have in our life that matters.
+                        <div class="info-container">
+                            <p class="info">
+                                It's not what we have in life, but who we have in our life that matters.
+                            </p>
                         </div>
                     </div>
 
@@ -88,8 +94,10 @@
                             <img class="pet-img" src="./images/c-d-03.jpg" alt="cats and dogs">
                         </div>
 
-                        <div class="info">
-                            A good friend is like a four-leaf clover; hard to find and lucky to have.
+                        <div class="info-container">
+                            <p class="info">
+                                A good friend is like a four-leaf clover; hard to find and lucky to have.
+                            </p>
                         </div>
                     </div>
 
@@ -98,8 +106,10 @@
                             <img class="pet-img" src="./images/c-d-04.jpg " alt=" cats and dogs">
                         </div>
 
-                        <div class="info">
-                            Time doesn't take away from friendship, nor does separation.
+                        <div class="info-container">
+                            <p class="info">
+                                Time doesn't take away from friendship, nor does separation.
+                            </p>
                         </div>
                     </div>
 
@@ -111,12 +121,14 @@
 
         <div class="quote-section" id="quote">
             <div class="quote-content">
-                <div class="quote-text">
-                    Friendships is the golden thread that ties the heart of all the world.
+                <div class="quote-container">
+                    <p class="quote-text">
+                        Friendships is the golden thread that ties the heart of all the world.
+                    </p>
                 </div>
 
                 <div class="author">
-                    -JOHN EVELYN
+                    <strong>-JOHN EVELYN</strong>
                 </div>
             </div>
         </div>
@@ -127,10 +139,12 @@
                 <div class="banner-content">
                     <div class="banner-text">
                         <div class="banner-heading">
-                            Call to action It's time!
+                            <strong>Call to action It's time!</strong>
                         </div>
                         <div class="banner-description">
-                            If you like this landing page click on that button right over there!
+                            <p class="banner-description">
+                                If you like this landing page click on that button right over there!
+                            </p>
                         </div>
                     </div>
 
@@ -143,8 +157,8 @@
 
         <!--Footer Section-->
         <div class="footer-section hero-section">
-            <div class="footer-text">
-                Copyright &copy; C&D 2023
+            <div class="footer-container">
+                <span class="footer-text">Copyright &copy; C&D 2023</span>
             </div>
         </div>
     </div>
